--- a/Inventory_frontend/src/App.css
+++ b/Inventory_frontend/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -31,6 +31,96 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+} */
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.container {
+  padding: 2rem;
+  text-align: left;
+}
+
+.header, .footer {
+  background-color: #282c34;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  background-color: #111;
+}
+
+.banner {
+  background-color: #f4f4f4;
+  padding: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.banner h1 {
+  margin: 0;
+  font-size: 2.5rem;
+}
+
+.banner p {
+  margin: 0.5rem 0 0;
+  font-size: 1.25rem;
+}
+
+.inventory-list {
+  margin: 2rem 0;
+}
+
+.inventory-list table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.inventory-list th, .inventory-list td {
+  border: 1px solid #000000;
+  padding: 8px;
+}
+
+.inventory-list th {
+  background-color: #f2f2f2;
+  text-align: left;
 }
 
 .card {
