--- a/Inventory_frontend/src/App.css
+++ b/Inventory_frontend/src/App.css
@@ -1,46 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -63,16 +20,19 @@
 .navbar {
   background-color: #333;
   overflow: hidden;
+  width: 100%;
 }
 
 .navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .navbar li {
-  float: left;
+  margin: 0 1rem;
 }
 
 .navbar li a {
@@ -104,29 +64,25 @@
   font-size: 1.25rem;
 }
 
-.inventory-list {
+.table-container {
   margin: 2rem 0;
 }
 
-.inventory-list table {
+.table-container table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.inventory-list th, .inventory-list td {
-  border: 1px solid #000000;
+.table-container th, .table-container td {
+  border: 1px solid #ddd;
   padding: 8px;
 }
 
-.inventory-list th {
+.table-container th {
   background-color: #f2f2f2;
   text-align: left;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.table-container td {
+  text-align: center;
 }
